Fixes issue #1600 - Remove unnecessary access flags for Weld (#1601)