@@ -150,9 +150,6 @@
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>cloud.piranha.micro.MicroPiranha</mainClass>
-                                    <manifestEntries>
-                                        <Add-Opens>java.base/java.lang</Add-Opens>
-                                    </manifestEntries>
                                 </transformer>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
